--- a/server/package.json
+++ b/server/package.json
@@ -37,11 +37,15 @@
     "@koa/cors": "^3.0.0",
     "dotenv": "^7.0.0",
     "elastic-apm-node": "^2.9.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-passport": "^4.1.3",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "mongoose": "^5.5.3",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pino": "^5.12.2",
     "swagger-jsdoc": "^3.2.8",
     "swagger-ui-dist": "^3.22.1",
