--- a/server/package.json
+++ b/server/package.json
@@ -39,9 +39,11 @@
     "elastic-apm-node": "^2.9.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
+    "koa-body": "^4.1.0",
     "koa-bodyparser": "^4.2.0",
     "koa-passport": "^4.1.3",
     "koa-router": "^7.4.0",
+    "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
     "mongoose": "^5.5.3",
     "passport-jwt": "^4.0.0",
