--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 node_modules/
+files/
+uploads/
 authconfig.json
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
